Step 3: Application logic, data structures, structural patterns